tests/ui/imports/suggest-public-reexport-for-use.edition2015.stderr
error[E0603]: module `inner` is private
  --> $DIR/suggest-public-reexport-for-use.rs:27:12
   |
LL | use outer::inner::MyStruct;
   |            ^^^^^ private module
   |
note: the module `inner` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:16:5
   |
LL |     mod inner {
   |     ^^^^^^^^^
help: consider importing this struct through its public re-export instead
   |
LL - use outer::inner::MyStruct;
LL + use outer::MyStruct;
   |

error[E0603]: module `inner` is private
  --> $DIR/suggest-public-reexport-for-use.rs:28:12
   |
LL | use outer::inner::my_function;
   |            ^^^^^ private module
   |
note: the module `inner` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:16:5
   |
LL |     mod inner {
   |     ^^^^^^^^^
help: consider importing this function through its public re-export instead
   |
LL - use outer::inner::my_function;
LL + use outer::my_function;
   |

error[E0603]: module `inner` is private
  --> $DIR/suggest-public-reexport-for-use.rs:29:12
   |
LL | use outer::inner::MyTrait;
   |            ^^^^^ private module
   |
note: the module `inner` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:16:5
   |
LL |     mod inner {
   |     ^^^^^^^^^
help: consider importing this trait through its public re-export instead
   |
LL - use outer::inner::MyTrait;
LL + use outer::MyTrait;
   |

error[E0603]: module `inner` is private
  --> $DIR/suggest-public-reexport-for-use.rs:30:12
   |
LL | use outer::inner::MyEnum;
   |            ^^^^^ private module
   |
note: the module `inner` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:16:5
   |
LL |     mod inner {
   |     ^^^^^^^^^
help: consider importing this enum through its public re-export instead
   |
LL - use outer::inner::MyEnum;
LL + use outer::MyEnum;
   |

error[E0603]: module `inner` is private
  --> $DIR/suggest-public-reexport-for-use.rs:36:16
   |
LL |     use outer::inner::MyStruct;
   |                ^^^^^ private module
   |
note: the module `inner` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:16:5
   |
LL |     mod inner {
   |     ^^^^^^^^^
help: consider importing this struct through its public re-export instead
   |
LL -     use outer::inner::MyStruct;
LL +     use outer::MyStruct;
   |

error[E0603]: module `inner` is private
  --> $DIR/suggest-public-reexport-for-use.rs:46:20
   |
LL |         use outer::inner::MyStruct;
   |                    ^^^^^ private module
   |
note: the module `inner` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:16:5
   |
LL |     mod inner {
   |     ^^^^^^^^^
help: consider importing this struct through its public re-export instead
   |
LL -         use outer::inner::MyStruct;
LL +         use outer::MyStruct;
   |

error[E0603]: module `hidden` is private
  --> $DIR/suggest-public-reexport-for-use.rs:60:18
   |
LL | use no_reexport::hidden::Secret;
   |                  ^^^^^^  ------ struct `Secret` is not publicly re-exported
   |                  |
   |                  private module
   |
note: the module `hidden` is defined here
  --> $DIR/suggest-public-reexport-for-use.rs:55:5
   |
LL |     mod hidden {
   |     ^^^^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0603`.
